2005-05-22  Mark Kettenis  <kettenis@gnu.org>

	* NEWS: Mention OpenBSD/arm as a new native configuration.

	* armnbsd-nat.c: Include "gdb_string.h" and "inf_ptrace.h".
	Reorder includes.  Don't require FETCH_INFERIOR_REGISTERS to be
	defined.
	(armnbsd_fetch_registers): Rename from armnbsd_fetch_registers.
	Make static.
	(armnbsd_store_registers): Rename from armnbsd_store_registers.
	Make static.
	(_initialize_arm_netbsd_nat): Construct and add target vector.
	* Makefile.in (armnbsd-nat.o): Update dependencies.
	* config/arm/nbsdaout.mh (NATDEPFILES): Remove infptrace.o and
	intarg.o, add inf-ptrace.o.
	(NAT_FILE): Set to solib.h.
	* config/arm/nbsdelf.mh (NATDEPFILES): Remove infptrace.o and
	inftarg.o, add inf-ptrace.o.
	(NAT_FILE): Remove.

	* arm-tdep.c (arm_extract_return_value, arm_store_return_value):
	Change type of last argument to `gdb_byte *'.

	* configure.host: Add arm*-*-openbsd*.
	* configure.tgt: Add arm*-*-openbsd*.

2005-05-22  Andrew Cagney  <cagney@gnu.org>

	* frame.h (frame_register_unwind, frame_unwind_register)
	(get_frame_register, frame_register, put_frame_register)
	(get_frame_memory, safe_frame_unwind_memory)
	(frame_register_read): Use gdb_byte for byte buffer parameters.
	* trad-frame.h (trad_frame_get_register)
	(frame_get_prev_register): Ditto.
	* frame-unwind.h (frame_prev_register_ftype): Ditto.
	* frame.c (frame_pop, frame_register, frame_unwind_register) 
	(get_frame_register, frame_unwind_register_signed) 
	(frame_unwind_register_unsigned, frame_unwind_unsigned_register) 
	(frame_register_read, get_frame_memory): Update.
	* trad-frame.c (trad_frame_get_prev_register): Update.
	(trad_frame_get_register): Update.
	* gdbcore.h (deprecated_read_memory_nobpt, read_memory): Ditto.
	* breakpoint.c (deprecated_read_memory_nobpt): Update.
	* corefile.c (read_memory): Update.
	* tramp-frame.c (tramp_frame_prev_register): Update.
	* valops.c (value_assign): Update.
	* sentinel-frame.c (sentinel_frame_prev_register): Update.